syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "grpc_wasm.Grpc";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SayGoodbye (HelloRequest) returns (HelloReply);
  rpc GetCounter(google.protobuf.Empty) returns (CounterResponse);
  rpc AddOne (google.protobuf.Empty) returns (CounterResponse);
  rpc SubscribeToCounter (UpdateInterval) returns (stream CounterResponse);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message CounterResponse {
	int32 counter = 1;
}

message UpdateInterval {
	int32 delay = 1;
}